# lmoclient

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  client.rs  config.rs  download.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  streaming.rs  utils.rs
src/commands/: chat.rs  config.rs  health.rs  load.rs  mod.rs  models.rs  status.rs  unload.rs
