[package]
name = "lmoclient"
version = "0.1.0"
edition = "2024"
description = "HTTP client library for LMOxide server communication"
license = "MIT OR Apache-2.0"

# Use as both a library and example binary
[[bin]]
name = "lmoclient"
path = "src/main.rs"

[lib]
name = "lmoclient"
path = "src/lib.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Server types (re-use from lmoserver)
lmoserver = { path = "../lmoserver", default-features = false }
# CLI framework
clap = { version = "4.0", features = ["derive", "env", "color"] }

# HTTP client library
lmoclient = { path = "../lmoclient" }

# Serialization for config files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Input/output
dialoguer = "0.11"

# Configuration management
dirs = "5.0"
url = "2.5"

# Terminal interaction for streaming
crossterm = "0.27"
