[package]
name = "lmoclient"
version = "0.1.0"
edition = "2021"
description = "LMOxide HTTP Client Library - HTTP client for communicating with lmoserver"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Server types (re-use from lmoserver)
lmoserver = { path = "../lmoserver", default-features = false }

# URL parsing for configuration
url = "2.5"

# Async streaming support
futures = "0.3"

# Async streaming support for SSE
async-stream = "0.3"